Update for Dependable Computing.

--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,7 @@
 \definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link color
 \hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour} % Set link colors throughout the document
 
-\usepackage{titlesec} % Used to customize the \section command
+	\usepackage{titlesec} % Used to customize the \section command
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule] % Text formatting of sections
 \titlespacing{\section}{0pt}{3pt}{3pt} % Spacing around sections
 
@@ -139,9 +139,24 @@
 \section{Selected Work Experience}
 \begin{tabular}{r|p{11cm}}
 
-\textsc{Apr 2018 - Present} & Department of Computer Science - University of Virginia \\
+\textsc{Feb 2020 - Current} & Dependable Computing, LLC \\
+& \emph{Principle Scientist}\\ 
+& \footnotesize{Working on a team building tools to support the development of provably-safe software for safety-critical systems. The work is sponsored by a grant from the Air Force Research Laboratory's Autonomy Research Collaboration Network (ARCNet). The tools are designed for those who build software that operates systems whose failure would have severe economic or physical consequences (up to, and including, loss of life). }\\
+\multicolumn{2}{c}{ } \\
+
+\textsc{Feb 2019 - Feb 2020} & Lighthouse Labs \\
+& \emph{Mentor (Part-Time)}\\ 
+& \footnotesize{Tutored students as they advanced through an in-person introduction-to-software-development bootcamp. Reinforced classroom lessons and taught industry best practices during students' independent work time. Answered questions about take-home work assignments and mentored students as they looked for jobs.}\\
+\multicolumn{2}{c}{ } \\
+
+\textsc{Feb 2019 - Feb 2020} & Mozilla Corporation \\
+& \emph{Senior Performance Engineer}\\ 
+& \footnotesize{Analyzed and improved the performance of the Firefox web browser. Worked especially closely with the new, yet-to-be-released Firefox web browser for Android. Participated in international committees that are developing performance standards for the web. Assisted with Mozilla community outreach programs geared toward introducing minorities to careers in software development.}\\
+\multicolumn{2}{c}{ } \\
+
+\textsc{Apr 2018 - Feb 2019} & Department of Computer Science - University of Virginia \\
 & \emph{Research Scientist}\\ 
-& \footnotesize{Working with a team of researchers on several ongoing NSF- and DoD-funded projects in software reliability and network security. Participating in the CFAR (Cyber Fault-tolerant Attack Recovery) program which focuses on analysis and transformation of binary programs (i.e., having no access to the program's source code or debugging symbols) to increase their safety, security and reliability. Using the static binary rewriter toolkit developed during my PhD research. Work involves understanding what makes software unreliable and vulnerable to attack (at the binary level) and using the static binary rewriter to address those shortcomings. Participating in the CHASE (Cyber-Hunting at Scale) program whose goal it is to develop technologies ``to detect and characterize novel attack vectors, collect the right contextual data, and disseminate protective measures both within and across enterprises.'' Work involves recreating and understanding malware campaigns, worms and botnets; gathering data for use in machine learning algorithms; mentoring and managing other researchers.}\\
+& \footnotesize{Worked with a team of researchers on several NSF- and DoD-funded projects in software reliability and network security. Participated in the CFAR (Cyber Fault-tolerant Attack Recovery) program which focused on analysis and transformation of binary programs (i.e., having no access to the program's source code or debugging symbols) to increase their safety, security and reliability. Used the static binary rewriter toolkit developed during my PhD research. Work involved understanding what makes software unreliable and vulnerable to attack (at the binary level) and used the static binary rewriter to address those shortcomings. Participated in the CHASE (Cyber-Hunting at Scale) program whose goal it was to develop technologies ``to detect and characterize novel attack vectors, collect the right contextual data, and disseminate protective measures both within and across enterprises.'' Work involved recreating and understanding malware campaigns, worms and botnets; gathering data for use in machine learning algorithms; mentoring and managing other researchers.}\\
 \multicolumn{2}{c}{ } \\
 
 %------------------------------------------------
