add reference to paper with Healy about teaching computational theory class.

--- a/resume.bib
+++ b/resume.bib
@@ -103,3 +103,19 @@ publisher = {ACM Press},
 title = {{TBABD: Test-Driven-Assurance-Based Development}},
 year = {2020}
 }
+@article{10.5555/1040151.1040177,
+author = {Hawkins, William H. and Healy, Christopher A.},
+title = {Introducing Practical Applications into a Computational Theory Class},
+year = {2004},
+issue_date = {December 2004},
+publisher = {Consortium for Computing Sciences in Colleges},
+address = {Evansville, IN, USA},
+volume = {20},
+number = {2},
+issn = {1937-4771},
+abstract = {One of the most important and difficult classes in the computer science major is the course on computational theory. The authors describe an approach to incorporate some hands-on laboratory activities, while sacrificing as little classic content as possible. The authors decided to focus on creating labs in which students could see a practical application to using regular expressions (using Lex) and context-free grammars (using Yacc). Along the way, the students gain insight on how finite automata work, and how a compiler parses source code and checks for syntax errors. The only significant problem we came across was that some students were unfamiliar with the C language or the UNIX operating system, but the students in general found the labs worthwhile. Next year, the authors plan on continuing with these laboratory experiences for the class, and plan to introduce one or two more exercises.},
+journal = {J. Comput. Sci. Coll.},
+month = dec,
+pages = {219–225},
+numpages = {7}
+}
