Add teaching experience.

--- a/resume.tex
+++ b/resume.tex
@@ -133,6 +133,17 @@
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
+
+\section{Teaching Experience}
+
+\begin{tabular}{ll}
+ & Introduction to Computer Science (TA), Computational Theory (TA), Cybersecurity (TA).\\
+
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE 
 %----------------------------------------------------------------------------------------
 
@@ -170,7 +181,6 @@ s with high bandwidth delay products, fair to other high volume data streams, an
 \multicolumn{2}{c}{} \\
 
 \end{tabular}
-
 
 %----------------------------------------------------------------------------------------
 % PUBLICATIONS %----------------------------------------------------------------------------------------
