Update for invited presentations.

--- a/resume.tex
+++ b/resume.tex
@@ -111,9 +111,8 @@
 
 \textsc{Aug 2006 - July 2014} & \makecell[tl]{Team TECHx: Cyber Reasoning System for the DARPA Cyber \\ Grand Challenge} \\
 & \emph{Hackademic} \\
-& \footnotesize{Competed on a team of researchers from the University of Virginia and GrammaTech, Inc. in the Cyber Grand Challenge, a DARPA-sponsored ``competition to create automatic defensive systems capable of reasoning about flaws, formulating patches and deploying them on a network in real time.`` Along with other team members, developed a) defensive tools and strategy and b) a system in go to monitor and store high speed network traffic in real time (presented the tool at GopherCon 2017). The team finished second and received a \$1 million cash prize.} \\
+& \footnotesize{Competed on a team of researchers from the University of Virginia and GrammaTech, Inc. in the Cyber Grand Challenge, a DARPA-sponsored ``competition to create automatic defensive systems capable of reasoning about flaws, formulating patches and deploying them on a network in real time.`` Along with other team members, a) deployed the static binary rewriter I wrote for my dissertation in production and b) developed a system to monitor and store high-speed network traffic in real time. The team finished second in the international competition and received a \$1 million cash prize.} \\
 & Team TechX at CGC: \url{https://www.youtube.com/watch?v=CHdmYY-kyuA} \\
-& Presentation at GopherCon 2017: \url{https://www.youtube.com/watch?v=lD0Qx7ZB_MU} \\
 \multicolumn{2}{c}{} \\
 
 \textsc{Dec 2004 - Sep 2005} & Real Time Scheduling \\
@@ -131,6 +130,35 @@
 & \footnotesize{Designed and implemented LIMP, an interpreted programming language, as an independent research project. Constructed the interpreter with 5000 lines of \texttt{C++} code. Language features an English based programming paradigm with native support for easily accessing networked resources. Published findings on designing, implementing and benchmarking LIMP.} \\
 
 \end{tabular}
+
+
+%----------------------------------------------------------------------------------------
+%	INVITED PRESENTATIONS
+%----------------------------------------------------------------------------------------
+\section{Invited Presentations}
+\begin{tabular}{r|p{11cm}}
+
+\textsc{July 2017} & GopherCon \\
+& \emph{Go at the DARPA Cyber Grand Challenge}\\
+& \footnotesize{I presented on the use of the Go programming language in building an award-winning entrant to the DARPA Cyber Grand Challenge. Go's channels, concurrency and ecosystem of third-party packages made it possible to efficiently capture high-speed streaming data during the competition. I explained how our team used Go to efficiently capture network traffic and store it in a database for near real-time analysis.}\\
+& \url{https://www.youtube.com/watch?v=lD0Qx7ZB_MU} \\
+\multicolumn{2}{c}{ } \\
+
+
+\textsc{February 2021} & Free and Open source Software Developers' European Meeting \\
+& \emph{The Ides of RISC-V}\\
+& \footnotesize{I demonstrated how to write a parallel Caesar cipher in RISC-V (in assembler) and test it using spike, the official RISC-V ISA emulator. I explained the revolutionary RISC-V ISA and its innovative vector extensions. I showed how spike is able to emulate the execution of a single user-space application when it is actually designed to emulate an entire system.}\\
+& \url{https://fosdem.org/2021/schedule/event/riscv_ides/} \\
+\multicolumn{2}{c}{ } \\
+
+\textsc{February 2021} &  Rust Meetup Linz (Austria) \\
+& \emph{Comparing Performance of Range- and Counter-Based Loops in Rust}\\
+& \footnotesize{In a short session, I shared the story of investigating the difference in performance between a `for v in expression` loop and a `while` loop in the Rust programming language. The talk covered topics in the Rust language itself, compiler optimization levels and how to benchmark performance.}\\
+& \url{https://youtu.be/ZsnkCCeJQ7I?t=3887} \\
+\multicolumn{2}{c}{ } \\
+
+\end{tabular}
+
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
