Add a skills section.

--- a/resume.tex
+++ b/resume.tex
@@ -104,6 +104,20 @@
 
 
 %----------------------------------------------------------------------------------------
+%	Skills
+%----------------------------------------------------------------------------------------
+
+\section{Skills}
+
+\begin{tabular}{r|p{10cm}}
+
+Programming languages & AWK, BASH, C, C++, Objective-C, Java, JavaScript, Pascal, PERL, Python, Rust, TypeScript.\\
+Operating Systems & Linux, Windows, macOS, iOS, Android.\\
+Network Protocols & 802.11, ARP, BGP, DNS, DHCP, HTTP/1.1, Kerberos, mDNS, PGP, TCP/IP, QUIC/HTTP3, UDP. 
+
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
 % ACADEMIC RESEARCH %----------------------------------------------------------------------------------------
 
 \section{Academic Research Projects}
@@ -161,7 +175,7 @@
 
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION
+%	Teaching Experience
 %----------------------------------------------------------------------------------------
 
 \section{Teaching Experience}
