--- a/resume.tex
+++ b/resume.tex
@@ -111,9 +111,9 @@
 
 \begin{tabular}{r|p{10cm}}
 
-Programming languages & AWK, BASH, C, C++, Objective-C, Java, JavaScript, Pascal, PERL, Python, Rust, TypeScript.\\
+Programming languages & BASH, C, C++, Objective-C, Go, Java, JavaScript, Kotlin, Pascal, PERL, Python, Rust, TypeScript.\\
 Operating Systems & Linux, Windows, macOS, iOS, Android.\\
-Network Protocols & 802.11, ARP, BGP, DNS, DHCP, HTTP/1.1, Kerberos, mDNS, PGP, TCP/IP, QUIC/HTTP3, UDP. 
+Network Protocols & 802.11, ARP, BGP, DNS, DHCP, HTTP/1.1, Kerberos, mDNS, PGP, TCP/IP, QUIC/HTTP3, UDP.
 
 \end{tabular}
 
