Change principle to principal

--- a/resume.tex
+++ b/resume.tex
@@ -179,7 +179,7 @@
 \begin{tabular}{r|p{11cm}}
 
 \textsc{Feb 2020 - Current} & Dependable Computing, LLC \\
-& \emph{Principle Scientist}\\ 
+& \emph{Principal Scientist}\\
 & \footnotesize{Working on a team building tools to support the development of provably-safe software for safety-critical systems. The work is sponsored by a grant from the Air Force Research Laboratory's Autonomy Research Collaboration Network (ARCNet). The tools are designed for those who build software that operates systems whose failure would have severe economic or physical consequences (up to, and including, loss of life). }\\
 \multicolumn{2}{c}{ } \\
 
